--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@welldone-software/why-did-you-render": "^6.1.1",
     "date-fns": "^2.21.1",
     "firebase": "^8.4.2",
+    "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^2.2.0",
@@ -39,7 +40,6 @@
       "!<rootDir>/src/fixtures/*.js",
       "!<rootDir>/src/hooks/*.js",
       "!<rootDir>/src/helpers/*.js"
-
     ],
     "coverageReporters": [
       "html"
